# voxel

./: .gitignore  .mcp.json  AGENTS.md  AGENTS_SETUP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  axiom-companion.service  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  run_dev_windows.bat  run_lvgl_deploy_wsl.cmd  run_lvgl_deploy_wsl.ps1  server.py  voxel-ui.service  voxel.service
.githooks/: pre-push
.github/workflows/: build-pi-image.yml  ci.yml  docs.yml
_legacy/: README.md  hardware_display.py
_legacy/face/: __init__.py  base.py  character.py  styles.py
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/src/: App.css  App.jsx  index.css  main.jsx  styles.js
cli/: __init__.py  __main__.py  app.py  dev_push.py  display.py  display_push.py  display_test.py  doctor.py  lvgl_test.py  setup_wizard.py
config/: default.yaml  settings.py
core/: audio.py  gateway.py  gateway_ws.py  log.py  mood_parser.py  stt.py  tts.py  webhook.py
design/: package-lock.json  package.json
design/src/: App.css  App.jsx  expressions.js  index.css  load-shared.js  styles.js
display/: __init__.py  __main__.py  advertiser.py  ambient.py  animation.py  boot_animation.py  boot_splash.py  config_server.py  decorations.py  demo.py  dev_panel.py  emoji_reactions.py  fonts.py  guardian.py  idle.py  layout.py  led.py  modifiers.py  overlay.py  renderer.py  service.py  state.py  status_decorations.py  system_stats.py  transitions.py  updater.py  wifi.py
display/backends/: base.py  framebuffer.py  pygame.py  spi.py  tkinter.py
display/characters/: __init__.py  base.py  bmo.py  cube.py  voxel.py
display/components/: button_indicator.py  error_toast.py  face.py  idle_hint.py  menu.py  onboarding.py  qr_overlay.py  shutdown_overlay.py  speaking_pill.py  status_bar.py  transcript.py  tutorial.py  (+1 more)
docs/: TODO-plugin.md  TODO.md  architecture.md  character-design.md  design-system.md  hardware.md  openclaw-integration.md
face/: character.py  expressions.py  renderer.py
hardware/: battery.py  buttons.py  display.py  led.py  platform.py
hw/: battery.py  buttons.py  detect.py
mcp/: __init__.py  __main__.py  server.py  tools.py
native/: README.md
native/lvgl_poc/: CMakeLists.txt  lv_conf.h  main.c
openclaw/: README.md  SETUP.md  SKILL.md
scripts/: boot_splash.py  preview_characters.py  setup.sh
services/: voxel-display.service  voxel-first-boot.service  voxel-guardian.service  voxel-mcp.service  voxel-splash.service  voxel-ui.service  voxel-web.service  voxel.service
shared/: __init__.py  expressions.yaml  moods.yaml  styles.yaml
states/: machine.py
tests/: test_audio_detect.py  test_button.py  test_characters.py  test_cli.py  test_guardian.py  test_mood_pipeline.py  test_state_lifecycle.py  test_websocket.py
user-docs/: index.md  package-lock.json  package.json
(+49 files in other folders)
