[project]
name = "voxel"
version = "0.1.0"
description = "Pocket AI companion device — animated cube mascot with voice interaction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "edge-tts>=6.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
pygame = [
    "pygame>=2.5.0",
    "Pillow>=10.0.0",
]

pi = [
    "spidev>=3.6",
    "RPi.GPIO>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "config", "face", "hardware", "shared", "states"]

[project.scripts]
voxel = "cli:main"
